[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://Maps/TitleScreenInterface.gd" type="Script" id=2]
[ext_resource path="res://Sprites/blank-white.png" type="Texture" id=3]

[node name="TitleScreen" type="Node"]

[node name="Interface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Interface"]
modulate = Color( 0.803922, 0.670588, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="Interface"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -34.0
margin_right = 60.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlay" type="Button" parent="Interface/Menu"]
margin_right = 120.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 1 )
text = "How to Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Interface/Menu"]
margin_top = 20.0
margin_right = 120.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Interface/Menu"]
margin_top = 40.0
margin_right = 120.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Interface/Menu"]
margin_top = 60.0
margin_right = 120.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LudumDare" type="Button" parent="Interface/Menu"]
margin_top = 80.0
margin_right = 120.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 16 )
theme = ExtResource( 1 )
text = "Ludum Dare Entry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Label" parent="Interface"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -108.0
margin_top = -12.0
margin_right = 99.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
text = "by @fiaKaiera & @chinoki346 2021"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LDNote" type="Label" parent="Interface"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = -14.0
margin_right = 214.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 1 )
text = "Made for Ludum Dare #48 (Deeper and Deeper)"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Interface"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = 24.0
margin_right = -1.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "Sleepy Cookie Eatie"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Interface/Menu/HowToPlay" to="Interface" method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="Interface/Menu/NewGame" to="Interface" method="_on_NewGame_pressed"]
[connection signal="pressed" from="Interface/Menu/Options" to="Interface" method="_on_Options_pressed"]
[connection signal="pressed" from="Interface/Menu/Exit" to="Interface" method="_on_Exit_pressed"]
[connection signal="pressed" from="Interface/Menu/LudumDare" to="Interface" method="_on_LudumDare_pressed"]
